[package]
name = "enc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-stack = "0.3.1"
ring = "0.16.20"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "enc_bench"
harness = false
